Bug 167018 - CRASH pasting a shape from Writer into draw
Summary: CRASH pasting a shape from Writer into draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-14 20:47 UTC by Telesto
Modified: 2026-03-16 15:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Call stack of the crash (6.92 KB, text/plain)
2025-06-14 21:52 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-06-14 20:47:50 UTC
Description:
CRASH pasting a shape from Writer into draw

Steps to Reproduce:
1. Open Writer
2. Draw a shape (say rectangle)
3. Copy it (CTRL+C)
4. Open new draw document
5. Paste (CTRL+V

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 220ef19df9de6ee7a99173a514402a9e701748d1
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2025-06-14 21:44:22 UTC
Also with macOS
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7fddf33f70b5e496ca7e3936a845d47b9deca027
CPU threads: 8; OS: macOS 14.7.4; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 2 Regina Henschel 2025-06-14 21:52:48 UTC
Created attachment 201280 [details]
Call stack of the crash
Comment 3 Regina Henschel 2025-06-14 21:53:59 UTC
Confirm the crash with build from current master Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7c556141ee892bf1081e3efb7770ff0fd96c7e55
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 4 Regina Henschel 2025-06-14 21:56:39 UTC
It does not crash in Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 32; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 5 Mike Kaganski 2025-06-14 22:22:33 UTC
https://gerrit.libreoffice.org/c/core/+/186507 and https://gerrit.libreoffice.org/c/core/+/186508 should handle the crash. But the paste still fails (now silently). That needs bisecting / debugging, which I don't have resources to do.

So let me assign it to myself, and *limit to the crash*. Please file the paste failure separately, when the crash fix lands. Thanks.
Comment 6 Commit Notification 2025-06-15 08:48:52 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/31a9739f51af032d21502c28c6b686ac061db0b4

tdf#167018: throwing out of a dtor is fatal

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-15 10:02:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e5c690c6be7df71cc612ef90e4502839ab519eb6

tdf#167018: let Theme::FromAny handle XTheme

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-06-15 13:09:24 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/749b9a889e2e1d5dfd57ee624ada65e1f0f5ab76

Related: tdf#167018 Generalize and deduplicate Theme::FromAny

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-06-16 11:18:04 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f2e8141fdb80611dd2c27924ece8edd56e11a332

tdf#167023, tdf#167018: sw: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-06-16 12:46:28 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e4ed2f1b835f23d4691c693e1deaae49426adab5

tdf#167018: throwing out of a dtor is fatal

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-06-16 12:47:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/4b62bbed3dc46461b4dde86ec9814c39663c1d02

tdf#167018: let Theme::FromAny handle XTheme

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-06-16 12:47:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/90dec68c914aed6529ce8bfde5b1df05bc74b6c6

Related: tdf#167018 Generalize and deduplicate Theme::FromAny

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2025-06-16 14:54:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/31d4f5624a7019dbd9a59b6769290db409e8236f

tdf#167023, tdf#167018: sw: Add UItest

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2025-06-16 16:49:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/c4776e71362ded19be28b9c5f6459d988b750c91

tdf#167023, tdf#167018: sw: Add UItest

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.